# spotify-liked-sync

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  config.toml.example  pyproject.toml
.github/workflows/: ci.yml
docs/: DEPLOY.md  prd.md
src/sync/: __main__.py  auth.py  client.py  config.py  notify.py  sync.py
tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_main.py  test_notify.py  test_sync.py
